# DistributionLib

./: CMakeLists.txt
include/: ITL_distcomputer.h  ITL_distribution.h  ITL_emdcomputer.h  ITL_multidistribution.h
src/: ITL_distcomputer.cpp  ITL_distribution.cpp  ITL_emdcomputer.cpp  ITL_multidistribution.cpp
